--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "author": "Edsnow",
   "license": "ISC",
   "dependencies": {
-    "express": "4.17.1",
-    "body-parser": "1.19.0",
-    "request": "2.88.2"
+    "express": "^4.17.1",
+    "body-parser": "^1.19.0",
+    "request": "^2.88.2"
   }
 }
